tests/machine/x/rust/list_set_ops.error
line 0: compile: exit status 1
error: expected one of `,`, `.`, `?`, or an operator, found `union`
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:2:33
  |
2 |     println!("{:?}", vec![1, 2] union vec![2, 3]);
  |                                 ^^^^^ expected one of `,`, `.`, `?`, or an operator

error: expected one of `,`, `.`, `?`, or an operator, found `except`
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:3:36
  |
3 |     println!("{:?}", vec![1, 2, 3] except vec![2]);
  |                                    ^^^^^^ expected one of `,`, `.`, `?`, or an operator

error: expected one of `,`, `.`, `?`, or an operator, found `intersect`
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:4:36
  |
4 |     println!("{:?}", vec![1, 2, 3] intersect vec![2, 4]);
  |                                    ^^^^^^^^^ expected one of `,`, `.`, `?`, or an operator

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `union`
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:5:37
  |
5 |     println!("{:?}", len(vec![1, 2] union vec![2, 3]));
  |                                    -^^^^^ expected one of `)`, `,`, `.`, `?`, or an operator
  |                                    |
  |                                    help: missing `,`

error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `vec`
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:5:43
  |
5 |     println!("{:?}", len(vec![1, 2] union vec![2, 3]));
  |                                          -^^^ expected one of 8 possible tokens
  |                                          |
  |                                          help: missing `,`

error[E0425]: cannot find value `union` in this scope
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:5:37
  |
5 |     println!("{:?}", len(vec![1, 2] union vec![2, 3]));
  |                                     ^^^^^ not found in this scope

error[E0425]: cannot find function `len` in this scope
 --> /workspace/mochi/tests/machine/x/rust/list_set_ops.rs:5:22
  |
5 |     println!("{:?}", len(vec![1, 2] union vec![2, 3]));
  |                      ^^^ not found in this scope
  |
help: use the `.` operator to call the method `len` on `&Vec<{integer}>`
  |
5 -     println!("{:?}", len(vec![1, 2] union vec![2, 3]));
5 +     println!("{:?}", vec![1, 2].len(union vec![2, 3]));
  |

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.

fn main() {
